--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+cloud-functions/functions/publitio_credentials.json
+cloud-functions/functions/service-account-file.json
 # dependencies
 /node_modules
-/cloud-functions
 /.pnp
 .pnp.js
 
