--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "coconutjs": "^3.0.0",
+    "dotenv": "^10.0.0",
     "firebase": "^8.6.5",
     "firebase-tools": "^9.12.1",
     "publitio_js_sdk": "^1.1.5",
