--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "browser-image-resizer": "^2.2.0",
     "coconutjs": "^3.0.0",
     "dotenv": "^10.0.0",
     "firebase": "^8.6.5",
     "firebase-tools": "^9.12.1",
+    "install": "^0.13.0",
     "publitio_js_sdk": "^1.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
