--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase-tools": "^9.12.1",
     "install": "^0.13.0",
     "publitio_js_sdk": "^1.1.5",
+    "razorpay": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
