--- a/cloud-functions/functions/package.json
+++ b/cloud-functions/functions/package.json
@@ -15,12 +15,16 @@
   "dependencies": {
     "@google-cloud/firestore": "^4.12.2",
     "@google-cloud/storage": "^5.8.5",
+    "body-parser": "^1.19.1",
     "coconutjs": "^3.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "express": "^4.17.2",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
     "firebase-tools": "^9.12.1",
-    "publitio_js_sdk": "^1.1.5"
+    "publitio_js_sdk": "^1.1.5",
+    "razorpay": "^2.8.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
