--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "browser-image-resizer": "^2.2.0",
     "coconutjs": "^3.0.0",
     "dotenv": "^10.0.0",
-    "firebase": "^8.6.5",
+    "firebase": "^9.6.3",
     "firebase-tools": "^9.12.1",
     "install": "^0.13.0",
     "publitio_js_sdk": "^1.1.5",
-    "razorpay": "^2.0.6",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-player": "^2.9.0",
